# crun

./: .coverage  .gitignore  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_zh.md  README.md  README_zh.md  SECURITY.md  SECURITY_zh.md  crun.spec  pyproject.toml  pytest.ini
.github/workflows/: release-linux.yml  release-windows.yml
.superpowers/brainstorm/29724-1778933119/content/: highlight.html  history-ux.html  keybindings.html  presets.html  roadmap.html  summary.html  tooltips.html  waiting.html
.superpowers/brainstorm/29724-1778933119/state/: server-stopped
data/: flags_default.json
docs/officaldocs/: CHANGELOG.md  main.md  technical-document.md
docs/superpowers/plans/: 2026-04-21-claude-run-impl.md  2026-05-16-crun-flags-completion.md  2026-05-16-crun-improvements.md  2026-05-17-crun-windows-adaptation.md
docs/superpowers/specs/: 2026-04-21-claude-run-design.md  2026-05-16-crun-flags-completion-design.md  2026-05-16-crun-improvements-design.md  2026-05-17-crun-windows-adaptation-design.md
scripts/: install.ps1  install.sh  sync_claude_docs.py  uninstall.ps1  uninstall.sh
src/claude_run/: __main__.py  app.py  config.py  flags.py  help.py  runner.py  search.py  version_check.py  widgets.py  wizard.py
tests/: test_app_conflicts.py  test_app_history.py  test_config.py  test_flags.py  test_integration.py  test_runner.py  test_search.py  test_sync_claude_docs.py  test_version_check.py  test_wizard.py
