[project]
name = "crun"
version = "0.5.4"
description = "A cross-platform CLI tool with TUI for selecting Claude Code startup flags"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "questionary>=2.1.1",
    "pypinyin>=0.51.0",
]

[project.scripts]
crun = "claude_run.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_run"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
    "pexpect>=4.9",
]
